	  is called more than once per line.
	* src/grep.c (prline): Now calls print_line_head(), not only at
	  the beginning to replace the moved code when -o is not
	  specified, but also for each match when -o is specified (two
	  code paths with this).  Patch #3770, more or less.  This makes
	  all tests combining -o and -n/-b/-H pass, which they didn't
	  before.  Fixes bug #12727.

2005-06-20  Charles Levert  <charles_levert@gna.org>

	* src/grep.c: Extensively document the SGR/EL-to-Right issue.

	* src/grep.c: Explain the context and logic for choosing default
	  --color screen attributes (SGR parameters).

2005-06-15  Charles Levert  <charles_levert@gna.org>

	* tests/foad1.sh: Since this script is run by /bin/sh, it
	  must work under posix mode.  That means not using assignment
	  statements right before a function call (LC_ALL=... grep_test,
	  in this case), because it won't do the expected thing.

2005-06-14  Charles Levert  <charles_levert@gna.org>

	Fix bug #11022 (Line wrapping causes GREP_COLOR background
	color to "smear") by outputting a "clear to end of line"
	control sequence after each SGR (Select Graphic Rendition)
	control sequence (START and END).  This also avoid similar
	problems with HT (tab) characters.

	* src/grep.c (SGR_START, SGR_END, PR_SGR_FMT, PR_SGR_FMT_IF,
	  PR_SGR_START, PR_SGR_END, PR_SGR_START_IF, PR_SGR_END_IF):
	  New macros.
	* src/grep.c (prline): Use the new macros.
	* tests/fmbtest.sh, tests/foad1.sh: Adjust the regression tests
	  to expect the new control sequences.

2005-05-06  Charles Levert  <charles_levert@gna.org>

	* TODO: Add a few more projects and derived versions to check out.

2005-05-05  Charles Levert  <charles_levert@gna.org>

	* README-alpha: Document grep-commit mailing list.
	* TODO: Add various stuff culled from the mailing list.

2005-05-02  Charles Levert  <charles_levert@gna.org>

	* 78 files: Update FSF's civic address, zip code,
	  and citizen relocation code.
